tests/errors/undefined-stitch.ink
-> somewhere.but_not_here

== somewhere
= here
